[package]
name = "actix-oidc-token"
version = "0.3.0"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Abstractions over OpenID Connect tokens for the actix-web framework"
homepage = "https://github.com/jofas/actix_oidc_token"
repository = "https://github.com/jofas/actix_oidc_token"
documentation = "https://docs.rs/actix_oidc_token"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^3.3.2" }
actix-web-httpauth = "^0.5.0"
serde = { version = "^1.0.123", features = ["derive"] }
serde_urlencoded = "^0.7.0"
serde_json = "^1.0.64"
tokio = { version = "^1.2.0", features = ["sync"] }
jonases-tracing-util = "^0.1.0"

[dev-dependencies]
actix-rt = "^1.1.1"
